--- a/DAY01/ES001/.azure/ES001-dev/.env
+++ b/DAY01/ES001/.azure/ES001-dev/.env
@@ -4,5 +4,5 @@ APP_SERVICE_PLAN_SKU="F1"
 AZURE_ENV_NAME="ES001-dev"
 AZURE_LOCATION="northeurope"
 AZURE_RESOURCE_GROUP="CORSO-DTTL0078-AZ-204"
-AZURE_SUBSCRIPTION_ID="8855b22a-640a-41db-bdc5-b423cb3e8feb"
-AZURE_TENANT_ID="6c7d8b3b-8c71-4013-be58-e78af03cde75"
+AZURE_SUBSCRIPTION_ID=""
+AZURE_TENANT_ID=""
