--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /DAY04/storage/StorageManagement/.vs
 /DAY04/storage/StorageManagement/StorageManagement/obj
 /DAY04/storage/StorageManagement/StorageManagement/bin
+/DAY04/storage/StorageManagement/StorageTableQueue/bin
+/DAY04/storage/StorageManagement/StorageTableQueue/obj
