--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /DAY04/storage/StorageManagement/StorageManagement/bin
 /DAY04/storage/StorageManagement/StorageTableQueue/bin
 /DAY04/storage/StorageManagement/StorageTableQueue/obj
+/DAY05/redis/es001/bin
+/DAY05/redis/es001/obj
